# claude-code-sourcemap

./: .gitignore  ARCHITECTURE.md  CODE_REVIEW.md  EXECUTE.txt  FILES_CREATED.txt  FINAL_SUMMARY.txt  INDEX.txt  QUICK_START.txt  README.md  README_SETUP.txt  REPORT.txt  SETUP_INSTRUCTIONS.txt  SETUP_SUMMARY.txt  START_HERE.txt  SWARM_ARCHITECTURE.md  create_dirs.bat  create_dirs.js  create_dirs.py  generate_project.py  init_rust_project.py  provider.txt  setup.bat  setup.py  test_rsplit.rs  test_rsplit2.rs
.github/: copilot-instructions.md
.github/workflows/: ci.yml
claude-code-rs/: .claude_todos.json  .gitignore  ARCHITECTURE.md  Cargo.toml  REVIEW_REPORT.md  clippy_after.txt  clippy_full.txt  clippy_v2.txt
claude-code-rs/crates/claude-agent/: Cargo.toml
claude-code-rs/crates/claude-agent/src/: audit.rs  bus_adapter.rs  compact.rs  computer_use.rs  coordinator.rs  cost.rs  cron_scheduler.rs  dispatch_agent.rs  engine.rs  executor.rs  hooks.rs  lib.rs  memory_extractor.rs  permissions.rs  query.rs  state.rs  swarm_bridge.rs  system_prompt.rs  task_runner.rs
claude-code-rs/crates/claude-agent/src/compact/: memory.rs  mod.rs
claude-code-rs/crates/claude-agent/src/engine/: builder.rs  impl_traits.rs  mod.rs  tests.rs
claude-code-rs/crates/claude-agent/src/hooks/: execution.rs  mod.rs  tests.rs  types.rs
claude-code-rs/crates/claude-agent/src/permissions/: mod.rs  tests.rs  tui.rs
claude-code-rs/crates/claude-agent/src/plugin/: loader.rs
claude-code-rs/crates/claude-agent/src/query/: e2e_tests.rs  helpers.rs  mod.rs  tests.rs
claude-code-rs/crates/claude-agent/src/swarm/: helpers.rs  mod.rs  team_create.rs  team_delete.rs  team_status.rs
claude-code-rs/crates/claude-agent/src/system_prompt/: mod.rs  sections.rs
claude-code-rs/crates/claude-agent/tests/: integration.rs
claude-code-rs/crates/claude-api/: Cargo.toml
claude-code-rs/crates/claude-api/src/: cache_detect.rs  client.rs  files.rs  lib.rs  model.rs  oauth.rs  openai.rs  provider.rs  retry.rs  stream.rs  types.rs  usage.rs
claude-code-rs/crates/claude-api/src/openai/: mod.rs  translate.rs  types.rs
claude-code-rs/crates/claude-bridge/: Cargo.toml
claude-code-rs/crates/claude-bridge/src/: adapter.rs  formatter.rs  gateway.rs  session.rs  webhook.rs
claude-code-rs/crates/claude-bridge/src/adapters/: feishu.rs  telegram.rs
claude-code-rs/crates/claude-bus/: Cargo.toml
claude-code-rs/crates/claude-bus/src/: bus.rs  events.rs
claude-code-rs/crates/claude-cli/: Cargo.toml
claude-code-rs/crates/claude-cli/src/: auth.rs  commands.rs  config.rs  diff_display.rs  input.rs  main.rs  markdown.rs  output.rs  repl.rs  repl_commands.rs  session.rs  theme.rs  ui.rs
claude-code-rs/crates/claude-cli/src/output/: helpers.rs  mod.rs  renderer.rs  stream.rs
claude-code-rs/crates/claude-cli/src/repl_commands/: agents.rs  branch.rs  config.rs  doctor.rs  mcp.rs  mod.rs  plan.rs  pr_comments.rs  prompt.rs  review.rs  session.rs  skill.rs
claude-code-rs/crates/claude-computer-use/: Cargo.toml
claude-code-rs/crates/claude-computer-use/src/: lib.rs  server.rs
claude-code-rs/crates/claude-core/: Cargo.toml
claude-code-rs/crates/claude-core/src/: agents.rs  bash_classifier.rs  claude_md.rs  concurrent_sessions.rs  config.rs  cron.rs  cron_lock.rs  cron_tasks.rs  file_history.rs  image.rs  lib.rs  memory.rs  message.rs  message_sanitize.rs  model.rs  permissions.rs  session.rs  skills.rs  token_estimation.rs  tool.rs  write_queue.rs
claude-code-rs/crates/claude-core/src/config/: hooks.rs  mod.rs  tests.rs
claude-code-rs/crates/claude-mcp/: Cargo.toml
claude-code-rs/crates/claude-mcp/src/: bus.rs  client.rs  lib.rs  protocol.rs  registry.rs  sse.rs  transport.rs  types.rs
claude-code-rs/crates/claude-rpc/: Cargo.toml
claude-code-rs/crates/claude-rpc/src/: error.rs  methods.rs  protocol.rs  server.rs  session.rs
claude-code-rs/crates/claude-rpc/src/transport/: stdio.rs  tcp.rs
claude-code-rs/crates/claude-swarm/: Cargo.toml
claude-code-rs/crates/claude-swarm/src/: actors.rs  bridge.rs  lib.rs  network.rs  server.rs  session.rs
claude-code-rs/crates/claude-tools/: Cargo.toml
claude-code-rs/crates/claude-tools/src/: agent_tool.rs  ask_user.rs  attribution.rs  bash.rs  config_tool.rs  context.rs  diff_ui.rs  file_edit.rs  file_read.rs  file_write.rs  git.rs  glob_tool.rs  grep.rs  lib.rs  ls.rs  lsp.rs  mcp.rs  multi_edit.rs  notebook.rs  path_util.rs  plan_mode.rs  powershell.rs  repl.rs  send_message.rs  skill_tool.rs  sleep.rs  task.rs  todo.rs  tool_search.rs  web_fetch.rs  web_search.rs  workflow.rs  worktree.rs
claude-code-rs/crates/claude-tools/src/lsp/: client.rs  config.rs  mod.rs
claude-code-rs/crates/claude-tools/src/mcp/: client.rs  mod.rs  server.rs  sse_transport.rs  transport.rs
claude-code-rs/docs/: COMPARISON.md
