[workspace]
members = [
    "crates/claude-core",
    "crates/claude-api",
    "crates/claude-tools",
    "crates/claude-agent",
    "crates/claude-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
rustyline = "14"
walkdir = "2"
glob = "0.3"
ignore = "0.4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
similar = { version = "2", features = ["unicode"] }
tokio-util = "0.7"
base64 = "0.22"
