[workspace]
members = [
    "crates/claude-core",
    "crates/claude-api",
    "crates/claude-tools",
    "crates/claude-agent",
    "crates/claude-bus",
    "crates/claude-cli",
    "crates/claude-mcp",
    "crates/claude-rpc",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.13.2", features = ["json", "stream", "form"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
rustyline = "18.0.0"
walkdir = "2"
glob = "0.3"
ignore = "0.4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
similar = { version = "3.0.0", features = ["unicode"] }
tokio-util = "0.7"
base64 = "0.22"
sha2 = "0.11.0"
rand = "0.10.0"
urlencoding = "2"
opener = "0.8.4"
crossterm = "0.29.0"
tempfile = "3"
rpassword = "7.4.0"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
indicatif = "0.18.4"
cliclack = "0.5.3"