[package]
name = "claude-bus"
version = "0.1.0"
edition = "2021"
description = "Internal event bus and JSON-RPC protocol for claude-code-rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
